kubernetes/apps/default/homepage/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: homepage.${SECRET_DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "homepage.${SECRET_DOMAIN}"
      secretName: "homepage-tls"
  rules:
    - host: "homepage.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
